assets/sass/_system.sass
// global
// red logo on all pages but home
html:not(.has-menu-opened)
    body:not(.page__home, .ancestor-solutions) header#document-header
        .logo svg path
            fill: $color-site-red
    body.page__home,
    body.ancestor-solutions
        header#document-header.is-sticky
            .logo svg path
                fill: $color-site-red

// icons
.icon-mail-fill::before
    @include icon-site("email")
.icon-instagram-fill::before
    @include icon-site("instagram")
.icon-facebook-fill::before
    @include icon-site("facebook")
.icon-linkedin-fill::before
    @include icon-site("linkedin")

// external links with icons
a[target="_blank"]:not(.icon)::after, 
.link[target="_blank"]:not(.icon)::after
    @include icon-site("external")
    display: inline-block
    margin-left: space(2)

//header
header#document-header
    .nav-level-1
        > li:nth-last-child(3) a
            @extend .button--accent
            &::after
                @include icon-site("email")
                display: inline-block
                vertical-align: middle

    .nav-level-2 > li a
        @include small-arrow-right-hover
    
    html.has-menu-opened &
        &, .dropdown-menu
            background: #{$header-dropdown-background}
            &, a, span, button
                color: $header-dropdown-color
        .button--accent
            color: var(--color-text)
            --btn-background: var(--color-background)
            --btn-hover-background: #{alphaColor(var(--btn-background), 0.9)}

    @include media-breakpoint-down(desktop)
        .primary-menu
            html.has-menu-opened &
                height: 100svh
            .header-button
                span:first-of-type
                    text-transform: none
        .nav-level-1
            > li
                border-color: var(--color-background)
                > a, > span, > button, > button span
                    @include signature
                .dropdown-menu-heading
                    display: none
                &:nth-last-child(3),
                &:nth-last-child(4)
                    border: none
                &:nth-last-child(3)
                    a
                        width: 100%
        .nav-level-2 > li
            > a, > span, > button
                @include meta
        .is-titled
            .nav-level-2
                margin-top: 0

    @include media-breakpoint-up(desktop)
        .search-button
            span:first-of-type
                display: none
        .nav-level-1
            > li:nth-last-child(2)
                margin-left: space(6)
                margin-right: space(8)
        .nav-level-2
            li + li
                margin-top: $spacing-3
        li:not(.primary-i18n)
            .dropdown-menu
                min-height: 80svh

// footer
footer#document-footer
    background: linear-gradient(180deg, #1F4C7A 0%, #0F283D 100%)
    overflow: hidden
    &::before
        background:
            image: url('/assets/images/logo.svg')
            repeat: no-repeat
            size: offset(4)
            position: 99% 22%
        bottom: 0
        content: ''
        left: 0
        pointer-events: none
        position: absolute
        right: var(--grid-gutter-negative)
        top: 0
    > * 
        position: relative
        z-index: 2
    h2
        @include meta
        color: alphaColor(var(--color-background), 0.8)
        margin-bottom: $spacing-2
    .container
        padding-bottom: 0
    .footer-menu
        @include grid(3, desktop)
        a
            @include signature
            @include small-arrow-right-hover
        > li > *
            @include h3
            + *
                margin-top: space(4)
    
    .footer-site
        @include meta
        .footer-cta 
            a
                @include signature
                @include small-arrow-right-hover
            + *
                margin-top: space(4)
        > div 
            address, a
                color: alphaColor(var(--color-background), 0.8)
    
    .footer-credit
        &:not(a)
            color: alphaColor(var(--color-background), 0.8)

    .footer-social
        li
            a[target="_blank"]::after
                display: none
            &::after
                width: pxToRem(18)
                @include media-breakpoint-up(desktop)
                    font-size: 100%
                    margin-left: space(4) !important
            &.instagram::after
                @include icon-site("instagram")
            &.facebook::after
                @include icon-site("facebook")
            &.linkedin::after
                @include icon-site("linkedin")
            &.vimeo::after
                @include icon-site("linkedin")
            &.youtube::after
                @include icon-site("youtube")

    @include media-breakpoint-down(desktop)
        padding-bottom: space(8)
        padding-top: space(8)
        &::before
            background:    
                position: right 77%
                size: pxToRem(347)
            transform: translateX(25%)
        .container
            display: flex
            flex-direction: column
            gap: space(10)
            > div, > p
                margin-top: 0
        .logo
            order: -2
        .footer-site
            order: -1
        .footer-menu,
        .footer-menu--secondary
            display: flex
            flex-direction: column
            gap: space(10)
        .footer-social
            order: -1
            li
                flex-direction: row
                &::after
                    margin-left: $spacing-2
                    margin-right: 0

    @include media-breakpoint-up(desktop)
        .container
            flex-wrap: wrap
            gap: var(--grid-gutter)
            justify-content: space-between
            > div:first-of-type
                border-bottom: 1px solid var(--color-text-alt)
                padding-bottom: var(--grid-gutter)
                width: 100%
        .logo
            order: 3
        .footer-site
            width: columns(4)
        .footer-menu--secondary
            @include grid(2, desktop)
            width: columns(8)
        .footer-site,
        .footer-social
            text-align: left
        .footer-credit
            margin-top: auto
            order: 4
            line-height: 1
            text-align: right
            width: columns(6)
        .footer-menu > li > a + *
            margin-top: $spacing-3
        .footer-social li
            justify-content: flex-start
            margin-right: auto
            width: fit-content

// hero
.hero
    .content
        h1
            color: #{$color-accent-alt}
        @include media-breakpoint-up(desktop)
            h1 + p
                margin-top: $spacing-4

// toc
.toc
    li a
        @include icon(arrow-right-s-line)
            display: inline-block

        @include media-breakpoint-up(desktop)
            &::before
                margin-left: -24px
                transition: all 0.3s ease
                opacity: 0
            
            &.active::before
                margin-left: -7px
                opacity: 1

// search
#search
    .pagefind-ui
        &__search-input
            border-color: var(--color-text)
        &__form::after,
            color: var(--color-text)
        &__message
            color: var(--color-accent)
        &__result + li
            margin-top: space(8)
            padding-top: space(8)
            border-top: 1px solid var(--color-text)
        &__result-title
            @include small-arrow-right-hover
            @include h3
            color: var(--color-text-alt)
            a
                @include h3
                text-decoration: none
                color: inherit

// specifics for project's solutions and home
.page__home,
.ancestor-solutions
    header#document-header:not(.is-sticky)
        &, .dropdown-menu
            &, a, span, button
                color: $header-dropdown-color
        .button--accent
            color: var(--color-text)
            --btn-background: var(--color-background)
            --btn-hover-background: #{alphaColor(var(--btn-background), 0.9)}
    .breadcrumb-nav
        li, a, span, li::before
            color: var(--color-background)

// projects categories ('solutions')
.ancestor-solutions
    .hero
        background-color: $color-site-dark-blue
        &, h1
            color: var(--color-background)
        @include media-breakpoint-down(desktop)
            &.hero--image-portrait
                margin-bottom: $spacing-5
                padding-bottom: $spacing-4
                figure
                    margin-bottom: 0 !important

